Fixes slight styling issues to make the inventory page more readable. Also, makes it so that when adding a new inventory item, the form to do so will not reset the department.

--- a/reactApplication/react_next_app/src/components/inventory/inventory.css
+++ b/reactApplication/react_next_app/src/components/inventory/inventory.css
@@ -81,3 +81,7 @@
     cursor: pointer;
     padding: 0;
   }
+
+  .inventory_main_container h2 {
+    padding-top: 10px;
+  }
